Gradle build scripts added, for both sql12 and sqfx projects.
- the aim is to take advantage of the incremental build feature of
Gradle to produce fast builds during development cycles

- Gradle build scripts are added without changes to the existing source
code structures in both projects, and with no changes to the existing
Ant build scripts or artifacts

- for the sql12 project, the Gradle build script produces the same
artifacts (zip distributions and IzPack install jars) as those from the
existing Ant build script

- for the sqfx project, in addition to producing the same portable zip
distribution (which excludes the JavaFX libraries which are
platform-specific) as that of the Ant build script, the Gradle script
also produces an OS-specific zip distribution which includes the JavaFX
native libraries of the current OS running the build and works right out
of the box without configuration

- for ease of use and familiarity with the existing Ant build scripts,
the Gradle build scripts have similar tasks such as 'buildAll',
'runApp', etc.

- the Gradle scripts produce their build artifacts in their own 'build'
directories, while the existing Ant scripts do so in their 'output'
directories, to be independent from one another.